--- a/templates/navbar/_navbar.html.twig
+++ b/templates/navbar/_navbar.html.twig
@@ -15,5 +15,19 @@
                 <a class="nav-link{{ currentRoute != 'app_default_contact' ? '' : ' active' }}" href="{{ path('app_default_contact') }}">Contact</a>
             </li>
         </ul>
+        <ul class="navbar-nav mb-2 mb-lg-0">
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_login') }}">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_register') }}">Register</a>
+                </li>
+            {% endif %}
+        </ul>
     </div>
 </nav>
